quiz model olusturuldu
