# swagger.json
@@ -5,7 +5,7 @@
     "title": "My API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "localhost:3000",
+  "host": "localhost:8080",
   "basePath": "/",
   "tags": [
     {
@@ -32,7 +32,7 @@
     "application/json"
   ],
   "paths": {
-    "/students/": {
+    "/quizs/": {
       "get": {
         "tags": [],
         "description": "",
@@ -54,7 +54,60 @@
         }
       }
     },
-    "/students/{id}": {
+    "/quizs/{id}": {
+      "get": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "put": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "delete": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/quizQuestions/{id}": {
       "get": {
         "tags": [],
         "description": "",
@@ -90,43 +143,7 @@
         }
       }
     },
-    "/enrollments/{id}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "delete": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/enrollments/": {
+    "/quizQuestions/": {
       "post": {
         "tags": [],
         "description": "",
@@ -148,13 +165,13 @@
         }
       }
     },
-    "/enrollments/students/{studentId}": {
+    "/quizQuestions/quizs/{quizId}": {
       "get": {
         "tags": [],
         "description": "",
         "parameters": [
           {
-            "name": "studentId",
+            "name": "quizId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -167,51 +184,13 @@
         }
       }
     },
-    "/enrollments/teachers/{teacherId}": {
+    "/quizQuestions/words/{wordId}": {
       "get": {
         "tags": [],
         "description": "",
         "parameters": [
           {
-            "name": "teacherId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/enrollments/lectures/{lectureId}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "lectureId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/enrollments/classes/{classId}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "classId",
+            "name": "wordId",
             "in": "path",
             "required": true,
             "type": "string"
